combines animation for header and fixes positioning

--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ h1 {
     color: white;
     text-shadow: 5px 1px 2px gray;
     position: relative;
-    animation: bounce 1s linear 3s 2 normal;
-    animation: shadow 15s ease-in-out 2s infinite normal;
+    animation: bounce 2s linear 0s 2 normal, shadow 15s ease-in-out 4s infinite normal;
+
 }
 
 /*changes the color of the shallow of the header*/
@@ -27,6 +27,16 @@ h1 {
     60% {text-shadow: 2px 4px 20px orange;}
     70%{text-shadow: 2px 1px 2px silver;}
     90% {text-shadow: 9px 1px 2px gray;}
+}
+
+/*codes for movement of the header (up&down)*/
+@keyframes bounce {
+    0% {top: 0px;}
+    20% {top: 20px;}
+    40% {top: 0px;}
+    60% {top: 20px;}
+    80% {top: 10px;}
+    100% {top: 20px;}
 }
 
 /*rotates the image*/
@@ -76,16 +86,6 @@ ul li {
     opacity: 0; /*lightbox=invisible*/
     transition: all 0.7s ease-in-out 0s;
 
-}
-
-/*codes for movement of the header (up&down)*/
-@keyframes bounce {
-    0% {top: 0px;}
-    20% {top: 20px;}
-    40% {top: 0px;}
-    60% {top: 20px;}
-    80% {top: 10px;}
-    100% {top: 20px;}
 }
 
 /*Codes for fade-in effect in the beginning*/
